Changing Cursor to Grab

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 body.cursor-pointer {
     cursor: pointer;
 }
-body.cursor-default {
-    cursor: default;
+body.cursor-grab {
+    cursor: grab;
 }
